adding playvideo to web site

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!-- styles owesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
-  <!-- styles local -->
+  <!-- menu styles -->
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -67,8 +67,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
+          <div>
+            <p>Lección 1</p>
+          </div>
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light active">
+            <a  class="list-group-item list-group-item-secundary active">
               Lección 1
             </a>
             <a href="#" class="list-group-item list-group-item-action">1. Dapibus ac facilisis in</a>
@@ -80,7 +83,7 @@
       <div class="row">
         <div class="col-sm-12 mt-5">
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action list-group-item-light active">
+            <a  class="list-group-item list-group-item-light active">
               Lección 2
             </a>
             <a href="#" class="list-group-item list-group-item-action">1. Dapibus ac facilisis in</a>
