add list of available courses

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- styles owesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
   <!-- menu styles -->
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/menu-styles.css">
 </head>
 
 <body>
@@ -67,9 +67,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div>
-            <p>Lección 1</p>
-          </div>
           <div class="list-group">
             <a  class="list-group-item list-group-item-secundary active">
               Lección 1
