--- a/video-clase.html
+++ b/video-clase.html
@@ -12,7 +12,7 @@
 	<!-- styles owesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 	<!-- menu styles -->
-	<link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="./css/menu-styles.css">
 	<!-- videojs styles -->
 	<link rel="stylesheet" href="css/video-js.css">
 	<!-- video styles -->
