--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="">
   <title>Curso Electrónica</title>
-  <!-- styles bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- styles owesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <!-- menu styles -->
   <link rel="stylesheet" href="./css/menu-styles.css">
+  <!-- corousel -->
+  <link rel="stylesheet" href="./css/corousel.css">
 </head>
 
 <body>
@@ -59,38 +61,38 @@
       </ul>
     </div>
   </nav>
-  <!-- clases -->
-  <section>
-    <div class="title">
-      <h3>Bienvenidos al curso de ....</h3>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="list-group">
-            <a  class="list-group-item list-group-item-secundary active">
-              Lección 1
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">1. Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action">2. Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action">3. Porta ac consectetur ac</a>
-          </div>
+  <!-- carousel msj: falta arreglar detalles del carusel ya que las imagenes se ven mal-->
+  <main id="main">
+    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="imagen/foto1.jpg" alt="Mexico1">
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 mt-5">
-          <div class="list-group">
-            <a  class="list-group-item list-group-item-light active">
-              Lección 2
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">1. Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action">2. Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action">3. Porta ac consectetur ac</a>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="imagen/foto2.jpg" alt="Mexico2">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="imagen/foto3.jpg" alt="Mexico3">
+        </div>
+        <div class="overlay">
+          <div class="container-carousel">
+            <div class="row ">
+              <div class="col-md-6 offset-md-6">
+                <h2>Acerca de nosotros</h2>
+                <h4>Somos una organización de la zona de ecatepec que se dedida a transmitir educación de forma gratuita a través de internet. </h4>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </main>
+   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   
+  <!-- menu amburguesa -->
   <script src="./js/index.js"></script>
 </body>
 
