I use imgur link to the picture.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="imagen/foto1.jpg" alt="Mexico1">
+          <img class="d-block w-100" src="https://i.imgur.com/UY7kCzd.jpg" alt="Mexico1">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen/foto2.jpg" alt="Mexico2">
+          <img class="d-block w-100" src="https://i.imgur.com/62AeZ0d.jpg" alt="Mexico2">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="imagen/foto3.jpg" alt="Mexico3">
+          <img class="d-block w-100" src="https://i.imgur.com/4FgDyyk.jpg" alt="Mexico3">
         </div>
         <div class="overlay">
           <div class="container-carousel">
