vincule algunos links

--- a/lista-clases.html
+++ b/lista-clases.html
@@ -68,7 +68,7 @@
                         <a class="list-group-item list-group-item-secundary active">
                             Lección 1
                         </a>
-                        <a href="#" class="list-group-item list-group-item-action">1. Dapibus ac facilisis in</a>
+                        <a href="video-clase.html" class="list-group-item list-group-item-action">1. Bienvenida Al Curso</a>
                         <a href="#" class="list-group-item list-group-item-action">2. Morbi leo risus</a>
                         <a href="#" class="list-group-item list-group-item-action">3. Porta ac consectetur ac</a>
                     </div>
