--- a/lista-cursos.html
+++ b/lista-cursos.html
@@ -74,7 +74,7 @@
                 <h3>Diseño Gràfico</h3>
                 <p>Podemos crear la identidad corporativa de tu empresa. Diseño , Maquetación de folletos, Catálogos,
                     Papelería y mucho más.</p>
-                <a href="#">Ir al curso</a>
+                <a href="lista-clases.html">Ir al curso</a>
             </div>
         </div>
         <div class="card">
