--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="#">Cursos</a>
+          <a href="lista-cursos.html">Cursos</a>
         </li>
         <li>
           <a href="#">Acerca</a>
